--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
 		<!-- app section starts  -->
 		<section class="app-section">
 			<div class="app-banner">
-				<img src="./Images/app-section/Mask Group.png" alt="app banner img" />
+				<div class="main-circle">
+					<div class="circle"></div>
+					<img src="./Images/app-section/Mask Group.png" alt="app banner img" />
+				</div>
 			</div>
 			<div class="app-context">
 				<a href="#" class="purple-link">Download Now</a>
@@ -206,16 +209,16 @@
 								type="email"
 								id="email"
 								name="email"
-								placeholder="Your Name"
+								placeholder="your Email"
 								required
 							/>
 						</fieldset>
-						<fieldset>
+						<fieldset class="message">
 							<input
 								type="text"
 								id="message"
 								name="name"
-								placeholder="Your Name"
+								placeholder="Type Message"
 							/>
 						</fieldset>
 
@@ -253,17 +256,28 @@
 		<!-- footer  -->
 		<footer class="footer">
 			<div class="footer-left">
-				<img src="./Images/Header/bantu-warga-header-icon.png" alt="" />
+				<img src="./Images/footer.png" alt="" />
 				<p>
 					Kami adalah aplikasi pelayanan masyarakat dalam kasus kesehatan
 					terutama covid 19
 				</p>
-				<div class="social-links">
-
+				<div class="social-links bottom-item">
+					<i class="fa-brands fa-facebook"></i>
+					<i class="fa-brands fa-twitter"></i>
+					<i class="fa-brands fa-instagram"></i>
 				</div>
 			</div>
 			<div class="footer-right">
-
+				<p><b>Tentang Kami</b></p>
+				<p><b>Perusahaan</b></p>
+				<p><b>Dukungan</b></p>
+				<p>Tentang</p>
+				<p>Tim Kami</p>
+				<p>Pusat Dukungan</p>
+				<p>Fitur</p>
+				<p>Mitra Kami</p>
+				<p>Hubungi Kami</p>
+				<p class="bottom-item">copyright BantuWarga. All right reserved</p>
 			</div>
 		</footer>
 	</body>
